[package]
name = "mcp-http-server-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core library as path dependency (from submodule)
mcp-server-as-http-core = { path = "./core" }

# Node.js runtime specific dependencies
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
